ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: health-app-service
            port:
              number: 80
      - path: /otusapp/den090312(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: health-app-service
            port:
              number: 80
